tests/macros/tests/ui/err/trace-interleaved.stderr
error: expected identifier, found keyword `struct`
 --> tests/ui/err/trace-interleaved.rs:4:9
  |
4 | #[trace(struct)]
  |         ^^^^^^
